Fix disabled tests to use .toList() instead of Collectors.toList() for Java 21
Co-authored-by: carstenartur <3164220+carstenartur@users.noreply.github.com>